# dpasp

./: pyproject.toml  requirements.txt  setup.py
.github/workflows/: docs.yml  publish.yml  tests.yml
examples/: inference_result_demo.ipynb  run_pasp_from_file.py  run_pasp_from_string.py
pasp/: __init__.py  cexact.c  cexact.h  cinf.c  cinf.h  clearn.c  coptimize.c  coptimize.h  exact.c  gpu_optimize.py  grammar.py  program.py
tests/: utils.py
