[build-system]
requires = ["setuptools >= 65.6.3", "setuptools-scm >= 8.0", "numpy >= 1.23.5"]
build-backend = "setuptools.build_meta"

[project]
name = "pasp-plp"
dynamic = ["version", "dependencies"]
authors = [
  { name = "Renato Lui Geh", email = "renatogeh@gmail.com" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux",
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
description = "Probabilistic Answer Set Programming"

[project.optional-dependencies]
torch = ["torch >= 1.13.1"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]
# Version from git tags: v0.1.0 → 0.1.0
# Untagged commits after v0.1.0 get: 0.1.1.dev3+gabcdef (auto-bumped)
# For TestPyPI dev releases, use tags like: v0.1.0rc1, v0.1.0rc2
version_scheme = "post-release"
local_scheme = "no-local-version"

[project.urls]
Repository = "https://github.com/RenatoGeh/pasp"
Issues = "https://github.com/RenatoGeh/pasp/issues"

[project.scripts]
pasp = "pasp.app:main"
