[build-system]
requires = ["setuptools >= 65.6.3, <77", "setuptools-scm >= 8.0", "numpy >= 1.23.5"]
build-backend = "setuptools.build_meta"

[project]
name = "pasp-plp-uas"
dynamic = ["version"]
authors = [
  { name = "Renato Lui Geh", email = "renatogeh@gmail.com" },
  { name = "Shaun Donnelly", email = "shaun.t.e.donnelly@gmail.com" }
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux",
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
description = "Probabilistic Answer Set Programming"
dependencies = [
  "clingo == 5.8.0",
  "lark >= 1.1.5",
  "numpy >= 1.23.5",
  "pandas >= 1.5.3",
  "torch >= 1.13.1",
  "ninja",
]

[project.scripts]
pasp = "pasp.app:main"

[project.urls]
Repository = "https://github.com/stedonnelly/dpasp"
Issues = "https://github.com/stedonnelly/dpasp/issues"

[tool.setuptools]
packages = ["pasp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools_scm]
# Version from git tags: v0.1.0 → 0.1.0
# Untagged commits after v0.1.0 get: 0.1.1.dev3+gabcdef (auto-bumped)
# For TestPyPI dev releases, use tags like: v0.1.0rc1, v0.1.0rc2
version_scheme = "post-release"
local_scheme = "no-local-version"
